// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    disabled={false}
    testID="assessment-button"
  >
    <View
      style={
        Array [
          Object {
            "borderRadius": 10,
            "paddingHorizontal": 14,
            "paddingVertical": 22,
          },
          undefined,
          Object {
            "backgroundColor": "#5061e6",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#2e2e2e",
              "fontFamily": "IBMPlexSans",
              "fontSize": 17,
              "lineHeight": 24,
            },
            Object {
              "writingDirection": "ltr",
            },
            Array [
              Object {
                "color": "#f8f8f8",
                "textAlign": "center",
              },
              undefined,
              Object {
                "color": "#ffffff",
              },
            ],
          ]
        }
      >
        Next
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`color 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    disabled={false}
    testID="assessment-button"
  >
    <View
      style={
        Array [
          Object {
            "borderRadius": 10,
            "paddingHorizontal": 14,
            "paddingVertical": 22,
          },
          undefined,
          Object {
            "backgroundColor": "#5061e6",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#2e2e2e",
              "fontFamily": "IBMPlexSans",
              "fontSize": 17,
              "lineHeight": 24,
            },
            Object {
              "writingDirection": "ltr",
            },
            Array [
              Object {
                "color": "#f8f8f8",
                "textAlign": "center",
              },
              undefined,
              Object {
                "color": "#ffffff",
              },
            ],
          ]
        }
      >
        Next
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`disabled 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    disabled={true}
    testID="assessment-button"
  >
    <View
      style={
        Array [
          Object {
            "borderRadius": 10,
            "paddingHorizontal": 14,
            "paddingVertical": 22,
          },
          undefined,
          Object {
            "backgroundColor": "#e5e7fa",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#2e2e2e",
              "fontFamily": "IBMPlexSans",
              "fontSize": 17,
              "lineHeight": 24,
            },
            Object {
              "writingDirection": "ltr",
            },
            Array [
              Object {
                "color": "#f8f8f8",
                "textAlign": "center",
              },
              undefined,
              Object {
                "color": "#a5affb",
              },
            ],
          ]
        }
      >
        Next
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;
